Fix right padding of collapsed traffic explorer

--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,7 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+
+.box-title {
+    padding-right: 30px;
+}
